[gd_scene load_steps=3 format=1]

[ext_resource path="res://ui/game_over.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="game_over" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="restart" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 408.0
margin/top = 270.0
margin/right = 472.0
margin/bottom = 334.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="double_money" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 539.0
margin/top = 270.0
margin/right = 603.0
margin/bottom = 334.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="home" type="Button" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -423.0
margin/top = -380.0
margin/right = -601.0
margin/bottom = -446.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Home"
flat = false

[connection signal="pressed" from="restart" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="double_money" to="." method="_on_double_money_pressed"]

[connection signal="pressed" from="home" to="." method="_on_home_pressed"]


